# mustrd

./: .gitignore  GETSTARTED.adoc  MUSTRD_DEBUGGING_IMPROVEMENTS.md  README.adoc  README.md  data.json  mustrd.py  mustrd_config.ttl  namespace.py  pyproject.toml  pytest.ini  requirements.txt  results.md  tests.py  update_mustrd_files.py
.github/: test_config.ttl
docker/: dockerfile  readme.adoc
docs/: _headers  _redirects  _routes.json  index.html
functions/: [slug].ts
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1ad9aa9760c2f0a5_TestResult_py.html  z_1ad9aa9760c2f0a5_anzo_utils_py.html  z_1ad9aa9760c2f0a5_logger_setup_py.html  z_1ad9aa9760c2f0a5_mustrdAnzo_py.html  z_1ad9aa9760c2f0a5_mustrdGraphDb_py.html  z_1ad9aa9760c2f0a5_mustrdRdfLib_py.html  z_1ad9aa9760c2f0a5_mustrdTestPlugin_py.html  z_1ad9aa9760c2f0a5_mustrd_py.html  z_1ad9aa9760c2f0a5_namespace_py.html  z_1ad9aa9760c2f0a5_spec_component_py.html  z_1ad9aa9760c2f0a5_steprunner_py.html  z_1ad9aa9760c2f0a5_utils_py.html  z_36f028580bb02cc8_addspec_source_file_to_spec_graph_py.html  z_36f028580bb02cc8_graph_util_py.html  z_36f028580bb02cc8_test_construct_spec_py.html  z_36f028580bb02cc8_test_general_py.html  z_36f028580bb02cc8_test_mustrd_anzo_py.html  z_36f028580bb02cc8_test_pytest_mustrd_py.html  z_36f028580bb02cc8_test_select_spec_py.html  z_36f028580bb02cc8_test_spade_edn_group_source_py.html  z_36f028580bb02cc8_test_spec_parser_py.html  z_36f028580bb02cc8_test_spec_py.html  z_36f028580bb02cc8_test_then_table_result_gives_correct_expected_result_py.html  z_36f028580bb02cc8_test_update_spec_py.html  z_36f028580bb02cc8_unit_test_py.html
model/: mustrdShapes.ttl  ontology.ttl
mustrd/: README.adoc  TestResult.py  anzo_utils.py  logger_setup.py  mustrd.py  mustrdAnzo.py  mustrdQueryProcessor.py  mustrdRdfLib.py  namespace.py  (+7 more)
(+332 files in other folders)
