[tool.poetry]
name = "mustrd"
version = "0.1.0"
description = "A Spec By Example framework for RDF and SPARQL, Inspired by Cucumber."
authors = ["John Placek <john.placek@semanticpartners.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rdflib = "^6.2.0"
pytest = "^7.2.0"
pandas = "^1.5.2"
requests = "^2.28.2"
pyanzo = "^3.3.4"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
