[tool.poetry]
name = "mustrd"
version = "0.1.0"
description = "A Spec By Example framework for RDF and SPARQL, Inspired by Cucumber."
authors = ["John Placek <john.placek@semanticpartners.com>",
    "Juliane Piñeiro-Winkler <juliane.pineiro-winkler@semanticpartners.com>",
    "Aymeric Picou <aymeric.picou@semanticpartners.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^6.2.0"
pytest = "^7.2.0"
pandas = "^1.5.2"
multimethods-py = "^0.5.3"
colorlog = "^6.7.0"
requests = "^2.28.2"
pyanzo = "^3.3.7"
tabulate = "^0.9.0"
beautifulsoup4 = "^4.11.1"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
